--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<p><h2>What is the Capital of India?</h2></p>
+	<input type="radio" name = "Capital" >
+	<label for = "Capital">New Delhi</label>
+
+	<input type="radio" name = "Capital" >
+	<label for = "Capital">Mumbai</label>
+
+
+	<blockquote class= "ans">
+New Delhi is the capital of India and an administrative district of NCT Delhi.
+		
+	</blockquote>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
