--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<label for = "Capital">Mumbai</label>
 
 
-	<blockquote cite = "https://course.acciojob.com/open-web-editor?question=2f6a4b6c-4d7f-4a19-a009-d15349e5e914"
+	<blockquote cite = "https://en.wikipedia.org/wiki/New_Delhi"
 		class= "ans">
 New Delhi is the capital of India and an administrative district of NCT Delhi.
 		
